--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         automatizada y agendamiento de citas con procesamiento de voz natural.
                     </p>
                     <div class="project-links">
-                        <a href="#" class="project-link demo-link">
+                        <a href="https://llamadasconiapoenaielevenlabs.netlify.app/" class="project-link demo-link">
                             <i class="fas fa-play"></i> Demo Interactiva
                         </a>
                         <a href="https://www.loom.com/share/3a66c5b4dfc940d4b0a58e1c49f04bc1?sid=6a8d2efd-40dc-4dfe-adaa-6fc1566064b6" class="project-link video-link">
@@ -194,7 +194,7 @@
                         inscripciones y atención al cliente multicanal.
                     </p>
                     <div class="project-links">
-                        <a href="#" class="project-link demo-link">
+                        <a href="https://llamadasconiapoenaielevenlabs.netlify.app/" class="project-link demo-link">
                             <i class="fas fa-play"></i> Demo Interactiva
                         </a>
                         <a href="https://www.loom.com/share/1217eb5c04404da0b4a94f44adf23e96" class="project-link video-link">
@@ -253,11 +253,7 @@
                 <h3>WhatsApp</h3>
                 <a href="https://wa.me/+573007859566" style="text-decoration: none; color: whitesmoke;">3007859566</a>
             </div>
-            <div class="contact-item" data-aos="fade-up" data-aos-delay="500">
-                <i class="fab fa-linkedin"></i>
-                <h3>LinkedIn</h3>
-                <p>linkedin.com/in/aisolutions</p>
-            </div>
+            
         </div>
     </section>
 
