fix text nonsense

--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@
     <!-- Contact Section -->
     <section id="contact" class="section contact">
         <h2 data-aos="fade-up">Contacto</h2>
-        <p data-aos="fade-up" data-aos-delay="100">¿Listo para automatizar tu negocio con IA? Contáctanos para una
-            consulta gratuita</p>
+        <p data-aos="fade-up" data-aos-delay="100">¿Listo para automatizar tu negocio con IA? </p>
         <div class="contact-info">
             <div class="contact-item" data-aos="fade-up" data-aos-delay="200">
                 <i class="fas fa-envelope"></i>
